--- a/Generic Webpages/chicken/chicken.css
+++ b/Generic Webpages/chicken/chicken.css
@@ -1,21 +1,52 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-familty:'Poppins,sans-serif'
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-familty: 'Poppins,sans-serif'
 }
 
-header{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    padding:20px 100px;
-    background:yellow;
-    display:flex;
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    background: yellow;
+    display: flex;
     justify-content: space-between;
-    align-items:center;
-    z-index:99;
+    align-items: center;
+    z-index: 99;
 
+
+}
+
+.logo {
+    font-size: 2em;
+    color: black;
+    user-select: none;
+}
+
+.navbar a {
+    position: relative;
+    font-size: 1.1em;
+    color: red;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+
+}
+
+.navbar .login-btn {
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border:2px solid red;
+    outline:none;
+    border-radius: 6px;
+    cursor:pointer;
+    font-size: 1.1em;
+    color:red;
+    font-weight: 500;
+    margin-left: 40px;
 
 }
