--- a/Generic Webpages/chicken/chicken.css
+++ b/Generic Webpages/chicken/chicken.css
@@ -5,13 +5,22 @@
     font-familty: 'Poppins,sans-serif'
 }
 
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-size:cover;
+    background: url('img/img.png') no-repeat center;
+}
+
 header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     padding: 20px 100px;
-    background: yellow;
+    /*background: yellow;*/
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,6 +30,7 @@ header {
 }
 
 .logo {
+    width:70px;
     font-size: 2em;
     color: black;
     user-select: none;
@@ -45,17 +55,28 @@ header {
     border-radius: 6px;
     cursor:pointer;
     font-size: 1.1em;
-    color:red;
+    color:crimson;
     font-weight: 500;
     margin-left: 40px;
-    transition:5s;
+    transition:.5s;
 
 }
-.navbar:after{
+.navbar a::after{
      content:'';
     position: absolute;
-
-
+    left:0;
+    bottom: -6px;
+    width:100%;
+    height:3px;
+    background: red;
+    border-radius: 5px;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform .5s;
+}
+.navbar a:hover::after{
+    transform:scaleX(1);
+    trasform-origin: left;
 }
 .navbar .login-btn:hover{
     background: white;
