--- a/Generic Webpages/chicken/chicken.css
+++ b/Generic Webpages/chicken/chicken.css
@@ -5,12 +5,12 @@
     font-familty: 'Poppins,sans-serif'
 }
 
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-size:cover;
+    background-size: cover;
     background: url('img/img.png') no-repeat center;
 }
 
@@ -30,7 +30,7 @@ header {
 }
 
 .logo {
-    width:70px;
+    width: 70px;
     font-size: 2em;
     color: black;
     user-select: none;
@@ -50,35 +50,95 @@ header {
     width: 130px;
     height: 50px;
     background: transparent;
-    border:2px solid red;
-    outline:none;
+    border: 2px solid red;
+    outline: none;
     border-radius: 6px;
-    cursor:pointer;
+    cursor: pointer;
     font-size: 1.1em;
-    color:crimson;
+    color: crimson;
     font-weight: 500;
     margin-left: 40px;
-    transition:.5s;
+    transition: .5s;
 
 }
-.navbar a::after{
-     content:'';
+
+.navbar a::after {
+    content: '';
     position: absolute;
-    left:0;
+    left: 0;
     bottom: -6px;
-    width:100%;
-    height:3px;
+    width: 100%;
+    height: 3px;
     background: red;
     border-radius: 5px;
     transform: scaleX(0);
     transform-origin: right;
     transition: transform .5s;
 }
-.navbar a:hover::after{
-    transform:scaleX(1);
+
+.navbar a:hover::after {
+    transform: scaleX(1);
     trasform-origin: left;
 }
-.navbar .login-btn:hover{
+
+.navbar .login-btn:hover {
     background: white;
-    color:gray
+    color: gray
+}
+
+.wrapper {
+    position: relative;
+    width: 400px;
+    height: 440px;
+    background: transparent;
+    border: solid 2px rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(255, 0, 0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.wrapper .form-login {
+    width: 100%;
+    padding:40px;
+
+}
+
+.form-login h2{
+    font-size: 2em;
+    color:#162938;
+    text-align: center;
+}
+.input-box{
+    position:relative;
+    width:100%;
+    height:50px;
+    border-bottom:2px solid red
+
+}
+.input-box label{
+    position:absolute;
+    top:50%;
+    left:5px;
+    transform:translateY(-50px);
+    font-size: 1em;
+    font-weight:500;
+    pointer-events: none;
+    color:red
+
+}
+.input-box input{
+    width: 100%;
+    height:100%;
+    background: transparent;
+    border:none;
+    outline:none;
+}
+.input-box .icon{
+    position: absolute;
+    right:8px;
 }
