--- a/Generic Webpages/chicken/chicken.css
+++ b/Generic Webpages/chicken/chicken.css
@@ -101,6 +101,27 @@ header {
 
 
 }
+.wrapper .icon-close{
+    position:absolute;
+    top:0;
+    right:0;
+    width:45px;
+    height: 45px;
+    background:red;
+    font-size:2em;
+    color:yellow;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow:hidden;
+    border-bottom-left-radius:20px ;
+    cursor:pointer;
+    z-index:1;
+
+
+
+
+}
 
 .wrapper .form-login {
     width: 100%;
@@ -117,7 +138,8 @@ header {
     position:relative;
     width:100%;
     height:50px;
-    border-bottom:2px solid red
+    border-bottom:2px solid red;
+    margin:30px 0;
 
 }
 .input-box label{
@@ -128,17 +150,81 @@ header {
     font-size: 1em;
     font-weight:500;
     pointer-events: none;
-    color:red
-
+    color:red;
+    /*transition:5s;*/
 }
+
+/*.input-box input:focus~label,*/
+/*.input-box input:valid~label{*/
+/*    top:-5px;*/
+/*}*/
+
 .input-box input{
     width: 100%;
     height:100%;
     background: transparent;
     border:none;
     outline:none;
+    font-size: 1em;
+    font-weight: 600;
+    padding:0 35px 0 5px;
+
 }
 .input-box .icon{
     position: absolute;
     right:8px;
+    font-size: 1.2em;
+    line-height: 57px;
 }
+.remember-forgot{
+    font-size: 12px;
+    font-weight: 500;
+    margin:-15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.remember-forgot label input{
+    margin-right:3px;
+
+}
+.remember-forgot a{
+    text-decoration: none;
+}
+
+.remember-forgot a:hover{
+    text-decoration: underline;
+}
+.sub-btn{
+    width:100%;
+    height:45px;
+    border:none;
+    background:red;
+    outline:none;
+    border-radius: 6px;
+    cursor:pointer;
+    font-size: 1em;
+    color:yellow;
+    font-weight: 500;
+
+}
+.register-login{
+    font-size: .9em;
+    text-align: center;
+    font-weight: 500;
+    margin:25px 0 10px
+}
+.register-login p a {
+    text-decoration: none;
+    font-weight: 600;
+
+}
+.login-btn p a:hover {
+    text-decoration: underline;
+
+
+}
+
+
+
