--- a/Generic Webpages/Rumble/anime.css
+++ b/Generic Webpages/Rumble/anime.css
@@ -1,9 +1,7 @@
 body{
     display: flex;
     background-size:contain;
-
-
-    background: url("img/img.png") no-repeat center;
+    background: url("img/img.png") no-repeat  center -50em;
 
 
 }
