--- a/Generic Webpages/Rumble/rumbling.css
+++ b/Generic Webpages/Rumble/rumbling.css
@@ -31,5 +31,44 @@ body {
     transform:rotate(90deg);
 }
 .cpu_result img{
-    transform:rotate(-90deg);
+    transform:rotate(-90deg) rotateY(180deg);
+}
+.result{
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 3rem;
+    color:#331330;
+
+}
+.optional_images{
+    display:flex;
+    align-items:center;
+    margin-top:2.5rem;
+    justify-content: space-between;
+    /*opacity:0.5;*/
+    /*transition: opacity 0.3s ease;*/
+}
+.option_images:hover{
+    opacity: 1;
+}
+.optional_image img{
+    pointer-events: none;
+}
+.optional_image{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    opacity:0.5;
+    transition: opacity 0.3s ease;
+     cursor:pointer;
+}
+.option_image p{
+    color:#331330;
+    font-size: 1.235rem;
+    margin-top:1rem;
+    pointer-events: none;
+}
+
+.optional_image img{
+    width:50px
 }
