--- a/Generic Webpages/Rumble/rumbling.css
+++ b/Generic Webpages/Rumble/rumbling.css
@@ -14,6 +14,69 @@ body {
     background:  url("img/img_1.png") no-repeat center -50em;
 
 }
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 100px;
+    /*background: yellow;*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 99;
+
+
+}
+.navbar a {
+    position: relative;
+    font-size: 1.1em;
+    color: red;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
+
+}
+
+.navbar .login-btn {
+    width: 130px;
+    height: 50px;
+    background: transparent;
+    border: 2px solid red;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1.1em;
+    color: crimson;
+    font-weight: 500;
+    margin-left: 40px;
+    transition: .5s;
+
+}
+
+.navbar a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: red;
+    border-radius: 5px;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform .5s;
+}
+
+.navbar a:hover::after {
+    transform: scaleX(1);
+    trasform-origin: left;
+}
+
+.navbar .login-btn:hover {
+    background: white;
+    color: gray
+}
 .container{
     padding:2rem 7rem;
     border-radius:14px;
@@ -23,6 +86,26 @@ body {
     display:flex;
     column-gap: 7rem;
 }
+
+.container.start .user_input{
+    animation: userShake 0.7s ease infinite;
+}
+@keyframes userShake {
+    50%{
+        transform:translateY(10px);
+    }
+
+}
+.container.start .cpu_result{
+    animation: cpuShake 0.7s ease infinite;
+}
+@keyframes cpuShake {
+    50%{
+        transform:translateY(-10px);
+    }
+
+}
+
 
 .result_image img {
     width: 100px;
