--- a/Cards!/cards.css
+++ b/Cards!/cards.css
@@ -1,3 +1,41 @@
-body{
-    background:black;
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    font-family: sans-serif, serif;
+
+}
+.card-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap:25px;
+    margin-top:100px;
+}
+.card{
+    width:325px;
+    background-color: lightblue;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.3);
+    cursor: pointer;
+}
+.card-content{
+    padding:30px 30px;
+    line-height: 1.3;
+}
+.card-content h1{
+    font-size: 35px;
+    margin-bottom: 10px;
+    color:#000
+}
+.card-content p{
+    font-size: 17px;
+    margin-bottom:20px;
+    color:#666
+}
+.card-content a{
+    font-size: 17px;
+    text-decoration: none;
+    color:#e0222e;
+    font-weight: bold;
 }
